[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
[project]
name = "lmtd"
version = "0.1.0"
description = "Whether MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "mcp>=1.15.0",
    "smithery>=0.4.2",
]
[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"
# Points to your server function
[tool.smithery] 
server = "server:create_server"
